# VirtualFaceCapture-MNN

./: .gitignore  .gitmodules  README.en.md  README.md  build.gradle  check_setup.sh  settings.gradle  version.gradle
CommonData/: build.gradle
CommonData/src/androidTest/java/com/example/commondata/: ExampleInstrumentedTest.kt
CommonData/src/main/java/com/example/commondata/: BlendShapeResult.kt  FaceLandmarkIndices.kt  FaceVisualizationData.kt  Landmark.kt
CommonData/src/test/java/com/example/commondata/: ExampleUnitTest.kt
Live2D/: CMakeLists.txt  build.gradle
Live2D/src/SDKRoot/Framework/src/Model/: CubismModel.cpp  CubismModel.hpp  CubismUserModel.cpp
Live2D/src/main/assets/Live2DModels/zzzz/: cc_names_zz.cfg  cc_zz.cfg  zz.cdi3.json  zz.moc3  zz.model3.json  zz.physics3.json  zz.prprl2d.json
Live2D/src/main/cpp/: CMakeLists.txt  JniBridgeC.cpp  JniBridgeC.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp
Live2D/src/main/cpp/L2DMath/: CubismTargetPointEx.cpp  CubismTargetPointEx.hpp
Live2D/src/main/java/com/live2d/demo/: JniBridgeJava.java
MediapipeFaceLandmark/: build.gradle
MediapipeFaceLandmark/src/androidTest/java/com/example/mediapipefacelandmark/: ExampleInstrumentedTest.kt
MediapipeFaceLandmark/src/main/assets/: face_blendshape_mp.mnn  face_detector_mp.mnn  face_detector_mp_int8.mnn  face_landmarks_detector_mp_int8.mnn
MediapipeFaceLandmark/src/main/cpp/: CMakeLists.txt  MediaPipeFaceLandmarkJNI.cpp  mnn_yuv_converter.cpp  yuv_converter.cpp
MediapipeFaceLandmark/src/main/cpp/include/: blendshape_predictor.h  face_detector.h  face_landmarker.h  face_pipeline_filter.h  mediapipe_face.h
MediapipeFaceLandmark/src/main/cpp/include/common/: logging.h  perf_profiler.h  types.h
MediapipeFaceLandmark/src/main/cpp/include/face_geomentry/: README_NODEP.md  canonical_face_mesh_data.h  geometry_pipeline_nodep.h  mini_linalg.h  neon_intrinsics.h  procrustes_solver_nodep.h  test_neon_optimization.h
MediapipeFaceLandmark/src/main/cpp/include/utils/: yuv_utils.h
MediapipeFaceLandmark/src/main/cpp/src/core/: blendshape_predictor.cpp  face_detector.cpp  face_landmarker.cpp
MediapipeFaceLandmark/src/main/java/com/example/mediapipefacelandmark/: Camera2Manager.kt  MNNYuvConverter.kt  MediaPipeFaceDetector.kt  NeonOptimizationTest.kt  YuvConverter.kt
OpenSeeFaceProcess/: README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
facecapture-sdk/: README.md  build.gradle  consumer-rules.pro  proguard-rules.pro
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+28 files in other folders)
